# sitemapy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/: __init__.py  sitemapy.py
src/sitemapy/: __init__.py  sitemapy.py
tests/: test-sitemap.xml  test_sitemap.py  test_sitemap_index.py  test_urlentry.py
