[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sitemapy"
version = "0.1.0"
description = "Python package that generates SEO-friendly XML sitemaps"
requires-python = ">=3.10"
dependencies = [
    "defusedxml==0.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]